@@ -1,3 +1,8 @@
+2010-05-25  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>
+
+	* interface.c, filter.c:
+	    Filtering logic change on 3rd-party digipeating.
+
 2010-05-24  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>
 
 	* interface.c, TODO:
